--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,10 +17,7 @@
     {% block navbar %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">
-                <i class="fas fa-plane me-2"></i>
-                {% if config.SCHOOL_NAME %}{{ config.SCHOOL_NAME }}{% else %}Flight School{% endif %}
-            </a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">Flight School</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
