--- a/app/templates/maintenance/base.html
+++ b/app/templates/maintenance/base.html
@@ -5,7 +5,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{{ url_for('main.index') }}">Home</a></li>
-            <li class="breadcrumb-item"><a href="{{ url_for('admin.aircraft_list') }}">Aircraft</a></li>
+            <li class="breadcrumb-item"><a href="{{ url_for('admin.aircraft') }}">Aircraft</a></li>
             {% block breadcrumb %}{% endblock %}
         </ol>
     </nav>
