--- a/app/templates/maintenance/types.html
+++ b/app/templates/maintenance/types.html
@@ -7,7 +7,7 @@
 {% block maintenance_content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1>Maintenance Types</h1>
-    <a href="{{ url_for('maintenance.add_maintenance_type') }}" class="btn btn-primary">
+    <a href="{{ url_for('admin.create_maintenance_type') }}" class="btn btn-primary">
         <i class="fas fa-plus"></i> Add Maintenance Type
     </a>
 </div>
